# ditherzam

./: .gitignore  BUILDING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
benchmarks/: HIGH_RES_ACCEPTANCE_2026-07-10.md  HIGH_RES_BASELINE_2026-07-09.md  QIMAGE_CONVERSION_2026-07-09.md  RESULTS.md  SMART_MASK_ACCEPTANCE_2026-07-11.md  THREAD_SCALING_2026-07-10.md  adjustment_fusion.py  bench.py  bench_cache.py  common.py  high_res.py  qimage_conversion.py  smart_mask.py  smart_mask_certification.py  thread_scaling.py  ui_latency.py
config/: config.yaml
ditherzam/: __init__.py  adjustments.py  app.py  batch.py  config.py  imaging.py  offline_smoke.py  presets.py  release_smoke.py  render.py  render_cache.py  threading_policy.py  warmup.py
docs/: ARCHITECTURE.md
packaging/: PORTABLE_README.txt  ditherzam-smart-mask.spec  ditherzam-standard.spec  ditherzam.iss  requirements-windows-build.txt  smart-mask-release.lock.example.json  version_info.txt
tests/: conftest.py  golden_harness.py  test_adjustment_fusion_exactness.py  test_adjustments.py  test_anim_ui_smoke.py  test_app_smoke.py  test_batch.py  test_color_context_cache.py  test_color_engine.py  test_color_engine_exactness.py  test_color_engine_ramp.py  test_colored_dither_brighten.py  test_config.py  test_controls.py  test_controls_palette.py  test_controls_ramp.py  test_convert.py  test_creative_dither_controls.py  test_delegates.py  test_diffusion_helper.py  test_diffusion_line_spacing.py  test_dither_parameters.py  test_echo_smear.py  test_effect_stack.py  test_effects_post.py  test_export_raster.py  (+104 more)
(+182 files in other folders)
