[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ditherzam"
version = "0.1.0"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "platformdirs>=4.0",
    "PySide6>=6.6",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
release = ["onnxruntime==1.22.1", "pyinstaller>=6.0,<7"]

[tool.setuptools.packages.find]
include = ["ditherzam*"]

[project.scripts]
ditherzam = "ditherzam.app:main"
